# Programming

./: .gitignore  LICENSE  README.md  Программирование.md
.obsidian/: workspace.json
ASD/: CMakeLists.txt  README.md  main.cpp  words.txt
ASD/3 semester/: CMakeLists.txt  main.cpp  sorting.txt
ASD/3 semester/include/: _lab1.hpp  _lab2.hpp  _lab3.hpp  _lab4.hpp  _lab5.hpp  _lab6.hpp  _lab7.hpp  _lab8.hpp  _lab9.hpp  includes.hpp  lab10.hpp  lab11.hpp  lab12.hpp  lab13.hpp  lab14.hpp  lab15.hpp  lab16.hpp  lab17.hpp  labs.hpp  queue.hpp
ASD/4 semester/: 4 semester.sln  Tasks.txt
ASD/4 semester/Task1/: Form1.Designer.cs  Form1.cs  Form1.resx  Program.cs  Task1.csproj
ASD/4 semester/Task1/Properties/: AssemblyInfo.cs  Resources.Designer.cs
ASD/4 semester/Task10/: Program.cs
ASD/4 semester/Task11/: Dot.cs  Form1.Designer.cs  Form1.cs  Program.cs  Task11.csproj  Vector2.cs
ASD/4 semester/Task11/Properties/: AssemblyInfo.cs  Settings.Designer.cs
ASD/4 semester/Task12/: Program.cs
ASD/4 semester/Task13/: Program.cs
ASD/4 semester/Task2/: Circle.cs  ColliderForm.cs  Dot.cs  Form1.Designer.cs  Form1.cs  Form1.resx  Program.cs  Segment.cs  Straight.cs  Task2-.csproj  Task2.csproj  Vector2.cs
ASD/4 semester/Task2/Properties/: AssemblyInfo.cs  Resources.Designer.cs
ASD/4 semester/Task3/: Program.cs
ASD/4 semester/Task4/: Program.cs
ASD/4 semester/Task5/: Program.cs  Text.txt
ASD/4 semester/Task6/: Program.cs
ASD/4 semester/Task7/: Program.cs
ASD/4 semester/Task8/: Program.cs
ASD/4 semester/Task9/: Path.csv  Path1.csv  Path2.csv  Path3.csv  Program.cs
ASD/4 semester/Test/: Program.cs
ASD/include/: labs.hpp  stack.hpp
BoP/: README.md
BoP/Caesar's cipher/: CMakeLists.txt  main.cpp
BoP/Caesar's cipher/assets/: input.txt
BoP/SFML Physics/: CMakeLists.txt  main.cpp
BoP/SFML Physics/include/: PhysicalObject.hpp
BoP/semester 1/Task 1/: Task1.cpp
BoP/semester 1/Task2/: Task2.cpp
BoP/semester 1/Task3/: Task3-1.cpp  Task3-2.cpp  Task3-3.cpp
BoP/semester 1/Task4/: Task4-1.cpp  Task4-2.cpp
BoP/semester 1/Task5/: Task5-1.cpp  Task5-2.cpp  Task5-3.cpp  Task5-4.cpp  Task5-5.cpp
BoP/semester 1/Task6/: Task6-1.cpp  Task6-2.cpp  Task6-3.cpp  input.txt
BoP/semester 1/Task7/: Task7.cpp
BoP/semester 1/Task8/: CMakeLists.txt  main.cpp
BoP/semester 1/Task8/assets/: input.txt
BoP/semester 1/Task8/inc/: Functions.h  ListFunctions.h
BoP/semester 1/Task8/src/: Functions.cpp  ListFunctions.cpp
BoP/semester 1/Task9/: main.cpp
BoP/semester 1/Task9/inc/: Functions.h  ListFunctions.h
BoP/semester 1/Task9/src/: Functions.cpp  ListFunctions.cpp
BoP/semester 2/Task1/: main.cpp
BoP/semester 2/Task1/inc/: Ellipse.hpp
BoP/semester 2/Task1/src/: Ellipse.cpp
BoP/semester 2/Task2/: CMakeLists.txt  main.cpp
BoP/semester 2/Task3/: CMakeLists.txt  main.cpp
BoP/semester 2/Task3/inc/: cString.hpp
BoP/semester 2/Task3/src/: cString.cpp
BoP/semester 2/Task4/: CMakeLists.txt  main.cpp
BoP/semester 2/Task4/inc/: BigInt.hpp
BoP/semester 2/Task4/src/: BigInt.cpp
BoP/semester 2/Task5/: CMakeLists.txt  main.cpp
BoP/semester 2/Task5/inc/: Matrix.hpp
BoP/semester 2/Task6/: CMakeLists.txt  main.cpp
BoP/semester 2/Task7/: CMakeLists.txt  input.binf  main.cpp
BoP/semester 2/Task8/: CMakeLists.txt  main.cpp
OOP/4 semester/Labs/: Labs.sln
OOP/4 semester/Practice/: Practice.sln
WEB/Lab 2/: docker-compose.yml  site.conf
WEB/Lab 2/code/: index.html
WEB/Lab 3/: Task1.php  Task10.php  Task11.php  Task12.php  Task2.php  Task3.php  Task4.php  Task5.php  Task6.php  Task7.php  Task8.php  Task9.php
WEB/Lab 4/: 9-1.php  9-2.php  9-3.php  9-4-1.php  9-4-2.php
WEB/Lab 5/: docker-compose.yml  site.conf
WEB/Lab 5/web/: index.php  load.php  save.php
WEB/Lab1/: Task1.html  Task2.html  index.html
(+85 files in other folders)
